--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,13 @@
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
-    
-    
+        {
+            "type": "java",
+            "name": "Launch Ejemplo",
+            "request": "launch",
+            "mainClass": "Ejemplo",
+            "projectName": "dw_ba48c5d9"
+        },
         {
             "name": "Python: Archivo actual",
             "type": "python",
