--- a/appCrud/front/package.json
+++ b/appCrud/front/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
