--- a/appCrud/front/package.json
+++ b/appCrud/front/package.json
@@ -26,6 +26,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "react-paginate": "^8.1.4",
     "sass": "^1.56.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
