--- a/appCrud/front/package.json
+++ b/appCrud/front/package.json
@@ -11,6 +11,7 @@
   "author": "Iwinser Sanchez <iwinser.sanchez47@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
